@@ -3,7 +3,7 @@
  * See the file LICENSE for details.
  * Sebastian Hammer, Adam Dickmeiss
  *
- * $Id: odr_any.c,v 1.1 2003-10-27 12:21:33 adam Exp $
+ * $Id: odr_any.c,v 1.2 2004-08-11 12:15:38 adam Exp $
  */
 #if HAVE_CONFIG_H
 #include <config.h>
@@ -24,7 +24,7 @@ int odr_any(ODR o, Odr_any **p, int opt, const char *name)
     if (o->direction == ODR_PRINT)
     {
 	odr_prname(o, name);
-    	fprintf(o->print, "ANY (len=%d)\n", (*p)->len);
+    	odr_printf(o, "ANY (len=%d)\n", (*p)->len);
     	return 1;
     }
     if (o->direction == ODR_DECODE)
