@@ -3,7 +3,7 @@
  * See the file LICENSE for details.
  * Sebastian Hammer, Adam Dickmeiss
  *
- * $Id: odr_choice.c,v 1.1 2003-10-27 12:21:33 adam Exp $
+ * $Id: odr_choice.c,v 1.2 2004-08-11 12:15:38 adam Exp $
  */
 #if HAVE_CONFIG_H
 #include <config.h>
@@ -33,7 +33,7 @@ int odr_choice(ODR o, Odr_arm arm[], void *p, void *whichp,
 	if (name)
 	{
 	    odr_prname(o, name);
-	    fprintf (o->print, "choice\n");
+	    odr_printf(o, "choice\n");
 	}
     }
     for (i = 0; arm[i].fun; i++)
